src/main.css
/*
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}
*/

/* My styles from original project (my.css) */
/* and only those actually used */
a {
  color: rgba(var(--dark_400), 1);
}

a:hover, a:active {
  text-decoration: line-through;
  color: rgba(var(--dark_400), 1);
}

.obfuscate {
  unicode-bidi: bidi-override;
  direction: rtl;
}

.video iframe {
  float: right;
  width: 320px;
  height: 240px;
  margin-left: 1em;
}

body {
  /*font-family: 'Spline Sans Mono', sans-serif;*/
  font-family: 'AR One Sans', sans-serif;
  font-weight: 400;
}

.navbar-nav {
  font-weight: 400;
  letter-spacing: 4.0px;
  font-size: 1.3em;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 700;
  line-height: 1.6;
  letter-spacing: 2.6px;
}
.smaller {
  font-size: 0.35em;
}

.card {
}
.card-timeline {
  width: 76px;
  height: 115px;
}
.card-body {
  font-size: 1em;
}
.card-title {
  font-size: 1em;
  font-weight: 700;
  line-height: 1.0;
  letter-spacing: 0px;
  font-family: 'Spline Sans Mono';
}
.card-title-timeline {
  font-size: 0.5em;
}
.card-text {
  font-size: 0.8em;
  font-family: 'AR One Sans', sans-serif;
}
.card-status {
  letter-spacing: 0;
  margin-top: 2px;
  font-size: 0.8em;
}
.card-body a {
  font-size: 0.8em;
}

.portrait-max {
  max-width: 150px;
  width:100%;
}

.card-img-top {
  width: 100%;
  height: 19vw;
  object-fit: cover;
}

